# advent-of-code

./: .gitignore
2015/: README.md  pyproject.toml
2015/day_one/: day_one.txt  not_quite_lisp.py
2015/tests/day_one/: test_not_quite_lisp.py
2021/: build.gradle
2021/src/main/java/: Dive.java  GiantSquid.java  HydrothermalVenture.java  SonarSweep.java
2021/src/test/java/: BinaryDiagnosticTest.java  HydrothermalVentureTest.java  SonarSweepTest.java
2024/: README.md
2024/day_five/: README.md  day_five-dev-1.rockspec  print_queue.lua  test_print_queue.lua
2024/day_four/: README.md  kls_database.db  settings.gradle.kts
2024/day_four/app/: build.gradle.kts
2024/day_four/app/src/main/kotlin/co/uk/wrongsides/: App.kt  CeresSearch.kt
2024/day_four/app/src/test/kotlin/co/uk/wrongsides/: AppTest.kt  CeresSearchTest.kt
2024/day_one/: day_one.txt  historian_hysteria.py
2024/day_seven/: README.md
2024/day_seven/app/: bridge_repair.rb
2024/day_seven/test/: test_bridge_repair.rb
2024/day_six/: README.md  settings.gradle.kts
2024/day_six/app/: build.gradle.kts
2024/day_six/app/src/main/java/co/uk/wrongsides/: App.java  Step.java  (+2 more)
2024/day_three/: README.md  package-lock.json  package.json
2024/day_three/src/: index.ts  mull-it-over.ts
2024/day_three/test/: index.spec.ts  mull-it-over.spec.ts
2024/day_two/: README.md  build.clj  deps.edn
2024/day_two/src/: day_two.clj
2024/day_two/test/: day_two_test.clj
2024/tests/day_one/: test_historian_hysteria.py
src/main/java/: BinaryDiagnostic.java
src/test/java/: DiveTest.java  GiantSquidTest.java
(+2 files in other folders)
