[tool.poetry]
name = "day_one"
version = "0.1.0"
description = ""
authors = ["Wrongsides <JohnByrne.1984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

